      where \code{optim()} is used internally.
    }
  }

  \subsection{SWEAVE & VIGNETTES}{
    \itemize{
      \item Option \code{keep.source = TRUE} is now the default.

      \item The way the type of user-defined options is determined has
      changed.  Previously they were all regarded as logical: now the
      type is determined by the value given at first use.

      \item \code{Sweave()} and \code{Stangle()} gain an \code{encoding}
      argument to specify the encoding of the vignette sources if the
      latter do not contain a \samp{\\usepackage[]{inputenc}} statement
      specifying a single input encoding.

      \item Package installation tangles the vignette sources: this step
      now converts the vignette sources from the vignette/package
      encoding to the current encoding, and records the encoding (if not
      ASCII) in a comment line at the top of the installed \file{.R}
      file.

      \item The preferred location for vignette sources is now the
      directory \file{vignettes} and not \file{inst/doc}: \command{R CMD
	build} will now re-build vignettes in \file{vignettes} and copy
      the \file{.Rnw} (etc) files and the corresponding PDFs to
      \file{inst/doc}.

      \item \command{R CMD Sweave} now supports a \option{--driver}
      option to select the Sweave driver: the default is equivalent to
      \option{--driver=RweaveLatex}.

      \item \command{R CMD Sweave} and \command{R CMD Stangle} support
      \option{--encoding} and \option{--options} options.

      \item The \code{RweaveLatex()} driver now runs each figure chunk
      once for each device (and hence by default once for a PDF figure).
      Vignettes which need a persistent graphics device will need to
      open one for themselves.

      \item Warnings are issued when non-portable filenames are found
      for graphics files (and chunks if \code{split=TRUE}).  Portable
      names are regarded as alphanumeric plus hyphen, underscore, plus